# agent-tripwire

./: .gitignore  README.md  inputs.jsonl  pyproject.toml
integrations/claude-code/: README.md  settings.snippet.json
integrations/opencode/: README.md  agent-tripwire.ts
openspec/changes/archive/2026-07-10-adopt-instructor/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-10-clarify-run-output/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-10-harden-litellm-path/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-10-scaffold-agent-tripwire/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-07-13-add-coding-agent-hooks/: design.md  proposal.md  (+1 more)
openspec/specs/classification-schema/: spec.md
openspec/specs/claude-code-integration/: spec.md
openspec/specs/gate-engine/: spec.md
openspec/specs/hook-gateway/: spec.md
openspec/specs/injection-detection/: spec.md
openspec/specs/opencode-integration/: spec.md
openspec/specs/risk-detection/: spec.md
openspec/specs/sensitive-output-detection/: spec.md
openspec/specs/transcript-audit/: spec.md
src/agent_tripwire/: __init__.py  __main__.py  detector.py  gate.py  hook_cli.py  providers.py  schema.py
src/agent_tripwire/adapters/: __init__.py  claude_code.py
tests/: test_adapter_claude_code.py  test_detector.py  test_detectors.py  test_gate.py  test_hook_cli.py  test_main.py  test_main_kinds.py  test_opencode_plugin.py  test_providers.py  test_providers_detectors.py  test_providers_litellm.py  test_schema.py  test_schema_detectors.py
(+16 files in other folders)
