[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-tripwire"
version = "0.1.0"
description = "A detector primitive: one agent action in, a schema-validated risk verdict out. Mock-first, verifiable offline."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

# The schema is the product spec, so pydantic is the one deliberate runtime dep —
# validation + (later) JSON parsing at the litellm boundary. The mock path still
# makes no network call and needs no API key. Extras are opt-in: `litellm` to point
# --model at a real model, `pretty` for colored output. Dev toolchain lives in the
# `dev` dependency group below.
dependencies = ["pydantic>=2"]

[project.optional-dependencies]
litellm = ["litellm>=1.50", "instructor>=1.0", "tenacity"]
pretty = ["rich>=13"]

# Dev toolchain as a PEP 735 dependency group — `uv sync` installs it by default.
# `rich` is duplicated with the `pretty` extra, and `tenacity` with the `litellm` extra,
# so the test suite can exercise the colored render path and the litellm retry path
# (which fakes litellm/instructor but uses real tenacity) without installing an extra.
[dependency-groups]
dev = ["pytest", "rich>=13", "tenacity"]

[project.scripts]
agent-tripwire = "agent_tripwire.__main__:main"
agent-tripwire-gate = "agent_tripwire.hook_cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_tripwire"]
